# computrendering

./: .gitignore  AGENTS.md  APITRACE_DEV_SKILL.md  APITRACE_TODO.md  CLAUDE.md  CLEAN_UP.md  CMakeLists.txt  COMMIT_REVIEW_SKILL.md  D3DSUPPORTPLAN.md  LICENSE  OPENISSUES.md  README.md  README_APITRACE.md  TRACE_DRIVE.md  build.sh
arch/: CG1SIM.cpp  CG1SIM.h  CMakeLists.txt  computrender.cpp  computrender.hpp
arch/bhavmodel/: CG1BMDL.cpp  CG1BMDL.h  CMakeLists.txt  bhavmodel.cpp  bhavmodel.hpp  bmGpuTop.cpp  bmGpuTop.h
arch/bhavmodel/Clipper/: bmClipper.cpp  bmClipper.h
arch/bhavmodel/FragmentOperator/: bmFragmentOperator.cpp  bmFragmentOperator.h
arch/bhavmodel/Rasterizer/: Fragment.cpp  Fragment.h  SetupTriangle.cpp  SetupTriangle.h  Tile.cpp  Tile.h  bmRasterizer.cpp  bmRasterizer.h
arch/bhavmodel/TextureProcessor/: PixelMapper.cpp  PixelMapper.h  bmTextureProcessor.cpp  bmTextureProcessor.h
arch/bhavmodel/UnifiedShader/: ShaderInstr.cpp  ShaderInstr.h  ShaderOptimization.cpp  ShaderOptimization.h  bmUnifiedShader.cpp  bmUnifiedShader.h
arch/common/: BitStream.cpp  BitStream.h  BitStreamReader.cpp  BitStreamReader.h  BitStreamWriter.cpp  BitStreamWriter.h  CG1MDLBASE.h  CMakeLists.txt  DynamicMemoryOpt.cpp  DynamicMemoryOpt.h  DynamicObject.cpp  DynamicObject.h  GPUReg.h  GPUType.h  GlobalProfiler.cpp  GlobalProfiler.h  ImageSaver.cpp  ImageSaver.h  MetaStream.cpp  MetaStream.h  Parser.cpp  Parser.h  Profiler.cpp  Profiler.h  RegGpu.cpp  RegGpu.hpp  RegStreamMultiprocessor.h  SupportMacro.h  Vec4FP32.cpp  Vec4FP32.h  Vec4Int.cpp  Vec4Int.h  modelbase.h  support.cpp  support.h
arch/common/metrics/: Fused_Stream_Architecture_Perf_Metrics_full.csv  counters.csv  perf_metrics.csv
arch/common/params/: CG1.0.json  CG1.0_Graphic.cfg  CG1.1.json  CG1.1_Graphic.cfg  CG1GPU.bak.ini  CG1GPU.csv  CG1GPU.ini  CG1GPU_MSAA4x.ini  CG1GPU_common.08.03.02.ini  CG1GPU_common.08.11.28.ini  CG1GPU_mcv2.ini  CG1GPUx1.ini  CG1GPUx2.ini  archParams.csv  archParams.h  arch_params.json  param_loader.cpp  param_loader.hpp
arch/common/specs/: module_spec_template.md
arch/funcmodel/: CG1CMDL.cpp  CG1CMDL.h  CMakeLists.txt  cmGpuTop.cpp  cmGpuTop.h
arch/funcmodel/CacheSystem/: CacheReplacement.cpp  CacheReplacement.h  CacheTemplate.h  cmColorCache.cpp  cmColorCache.h  cmColorCacheV2.cpp  cmColorCacheV2.h  cmFetchCache.cpp  cmFetchCache.h  cmFetchCache64.cpp  cmFetchCache64.h  cmInputCache.cpp  cmInputCache.h  cmROPCache.cpp  cmROPCache.h  cmTextureCache.cpp  cmTextureCache.h  cmTextureCacheGen.cpp  cmTextureCacheGen.h  cmTextureCacheL2.cpp  cmTextureCacheL2.h  cmZCache.cpp  cmZCache.h  cmZCacheV2.cpp  cmZCacheV2.h
arch/funcmodel/Clipper/: cmClipper.cpp  cmClipper.h  cmClipperCommand.cpp  cmClipperCommand.h  cmClipperStateInfo.cpp  cmClipperStateInfo.h  cmClipperStatusInfo.cpp  cmClipperStatusInfo.h
arch/funcmodel/CommandProcessor/: MetaStream.h  cmCommandProcessor.cpp  cmCommandProcessor.h
arch/funcmodel/DisplayController/: cmBlitter.cpp  cmBlitter.h  cmDisplayController.cpp  cmDisplayController.h  cmWakeUpQueue.h
arch/funcmodel/FragmentOperator/: cmBlendOperation.cpp  cmBlendOperation.h  cmColorBlockStateInfo.cpp  cmColorBlockStateInfo.h  cmColorWrite.cpp  cmColorWrite.h  cmColorWriteStatusInfo.cpp  cmColorWriteStatusInfo.h  cmColorWriteV2.cpp  cmColorWriteV2.h  cmGenericROP.cpp  cmGenericROP.h  cmROPOperation.cpp  cmROPOperation.h  cmROPStatusInfo.cpp  cmROPStatusInfo.h  cmZOperation.cpp  cmZOperation.h  cmZStencilStatusInfo.cpp  cmZStencilStatusInfo.h  cmZStencilTest.cpp  cmZStencilTest.h  cmZStencilTestV2.cpp  cmZStencilTestV2.h
arch/funcmodel/MemoryController/: cmMemoryController.cpp  cmMemoryController.h  cmMemoryControllerCommand.cpp  cmMemoryControllerCommand.h  cmMemoryControllerDefs.h  cmMemorySpace.h  cmMemoryTransaction.cpp  cmMemoryTransaction.h
arch/funcmodel/MemoryControllerV2/: cmBankQueueScheduler.cpp  cmBankQueueScheduler.h  cmBankSelectionPolicy.cpp  cmBankSelectionPolicy.h  cmChannelScheduler.cpp  cmChannelScheduler.h  cmChannelTransaction.cpp  cmChannelTransaction.h  cmDDRBank.cpp  cmDDRBank.h  cmDDRBurst.cpp  cmDDRBurst.h  cmDDRCommand.cpp  cmDDRCommand.h  cmDDRModule.cpp  cmDDRModule.h  cmDDRModuleState.cpp  cmDDRModuleState.h  cmDependencyBuffer.cpp  cmDependencyBuffer.h  cmDependencyQueue.cpp  cmDependencyQueue.h  cmFifoScheduler.cpp  cmFifoScheduler.h  cmFifoSchedulerBase.cpp  cmFifoSchedulerBase.h  cmGPUMemorySpecs.h  cmMCSplitter.cpp  cmMCSplitter.h  cmMCSplitter2.cpp  cmMCSplitter2.h  cmMemoryControllerV2.cpp  cmMemoryControllerV2.h  cmMemoryRequest.cpp  cmMemoryRequest.h  cmMemoryRequestSplitter.cpp  cmMemoryRequestSplitter.h  cmMemoryTraceRecorder.cpp  cmMemoryTraceRecorder.h  cmRWFifoScheduler.cpp  (+5 more)
arch/funcmodel/PrimitiveAssembler/: cmPrimitiveAssembly.cpp  cmPrimitiveAssembly.h  cmPrimitiveAssemblyCommand.cpp  cmPrimitiveAssemblyCommand.h  cmPrimitiveAssemblyInput.cpp  cmPrimitiveAssemblyInput.h  cmPrimitiveAssemblyRequest.cpp  cmPrimitiveAssemblyRequest.h  cmPrimitiveAssemblyStateInfo.cpp  cmPrimitiveAssemblyStateInfo.h
arch/funcmodel/Rasterizer/: cmFFIFOStateInfo.cpp  cmFFIFOStateInfo.h  cmFragmentFIFO.cpp  cmFragmentFIFO.h  cmFragmentFIFOState.h  cmFragmentInput.cpp  cmFragmentInput.h  cmHZAccess.cpp  cmHZAccess.h  cmHZStateInfo.cpp  cmHZStateInfo.h  cmHZUpdate.cpp  cmHZUpdate.h  cmHierarchicalZ.cpp  cmHierarchicalZ.h  cmInterpolator.cpp  cmInterpolator.h  cmRasterizer.cpp  cmRasterizer.h  cmRasterizerCommand.cpp  (+26 more)
arch/perfmodel/: CMakeLists.txt  GpuTop.cpp  GpuTop.h  perfmodel.cpp  perfmodel.h
arch/utils/: ArchConfig.h  CommandLineReader.cpp  CommandLineReader.h  ConfigLoader.cpp  ConfigLoader.h  Drawer.cpp  Drawer.h  MemoryControllerSelector.cpp  MemoryControllerSelector.h
driver/hal/: CMakeLists.txt  HAL.cpp  HAL.h  RegisterWriteBuffer.cpp  RegisterWriteBuffer.h  ShaderProgramSched.cpp  ShaderProgramSched.h
tests/ocl/: .clang-format  .gitignore  CMakeLists.txt  README.md
tools/PPMConvertor/: CMakeLists.txt  PPMConverter.sln  PPMConverter.vcxproj  PPMConverter.vcxproj.filters  PPMInspect.vcxproj  PPMInspect.vcxproj.filters
(+1329 files in other folders)
