project(CG1SIM)
# we require a number of libraries and defines for this project and all subprojects
# set these things up before adding subdirectories

set_property(GLOBAL PROPERTY CORE_MODULES)

# external packages required
#find_package(SystemC         REQUIRED)
#find_package(ZLIB            REQUIRED)

# external include dirs
include_directories(
    ${SYSC_INCLUDE_DIRS}
#    ${ZLIB_INCLUDE_DIRS}
)

#set(3RDPARTYLIB ${ZLIB_LIBRARY}
#                ${GDIPLUS_LIBRARY}
#    ${SYSTEMC_LIBRARY}
#    )


if(CG_ARCH_MODEL_DEVEL)
add_definitions(-DCG_ARCH_MODEL_DEVEL=1)
endif()


add_subdirectory(common)
#target_link_libraries(CG1Common PUBLIC ${3RDPARTYLIB})
add_subdirectory(bhavmodel)
target_link_libraries(CG1BMDL PUBLIC zlibstatic CG1Common)
add_subdirectory(funcmodel)
target_link_libraries(CG1CMDL PUBLIC zlibstatic HAL CG1Common)


set(OGLSRC 
              ${CMAKE_SOURCE_DIR}/arch/utils/ArchConfig.h
              ${CMAKE_SOURCE_DIR}/arch/utils/CommandLineReader.cpp
              ${CMAKE_SOURCE_DIR}/arch/utils/CommandLineReader.h

              ${CMAKE_SOURCE_DIR}/driver/utils/BufferDescriptor.cpp
              ${CMAKE_SOURCE_DIR}/driver/utils/MemoryRegion.cpp
              ${CMAKE_SOURCE_DIR}/driver/utils/DArray.cpp
              ${CMAKE_SOURCE_DIR}/driver/utils/log/LogObject.cpp
              ${CMAKE_SOURCE_DIR}/driver/utils/log/IncludeLog.cpp

              ${CMAKE_SOURCE_DIR}/driver/utils/TraceReader/TraceReader.cpp
              ${CMAKE_SOURCE_DIR}/driver/utils/TraceReader/GLExec.cpp
              ${CMAKE_SOURCE_DIR}/driver/utils/TraceReader/GLExecStats.cpp
              ${CMAKE_SOURCE_DIR}/driver/utils/TraceReader/StubApiCalls.cpp
              ${CMAKE_SOURCE_DIR}/driver/utils/GLResolver.cpp
              ${CMAKE_SOURCE_DIR}/driver/utils/GLJumpTable.cpp

              ${CMAKE_SOURCE_DIR}/driver/utils/TraceDriver/TraceDriverOGL.cpp
              ${CMAKE_SOURCE_DIR}/driver/utils/TraceDriver/TraceDriverApitrace.cpp
)


# generated include dir (which should be generated by hand "run OGLApiCodeGen proj")
set(OGLINC    ${CMAKE_SOURCE_DIR}/driver/utils/TraceReader
                          ${CMAKE_SOURCE_DIR}/driver/utils/ApitraceParser
              ${CMAKE_SOURCE_DIR}/driver/utils/OGLApiCodeGen # APICall.gen
              ${CMAKE_SOURCE_DIR}/driver/utils/GL 
              ${CMAKE_SOURCE_DIR}/driver/utils/log
              ${CMAKE_SOURCE_DIR}/driver/utils/MetaTraceGenerator # MetaStreamTrace.h
              ${CMAKE_SOURCE_DIR}/driver/ogl/OGL14 # GLContext.h
              ${CMAKE_SOURCE_DIR}/driver/ogl/OGL14/ARBP # ImplementationLimits.h
              ${CMAKE_SOURCE_DIR}/driver/ogl/OGL14/GLObject # BaseObject.h
              ${CMAKE_SOURCE_DIR}/driver/ogl/OGL14/Texture 
              ${CMAKE_SOURCE_DIR}/driver/ogl/OGL14/BufferObject 
              ${CMAKE_SOURCE_DIR}/driver/ogl/OGL2 
              ${CMAKE_SOURCE_DIR}/driver/ogl/OGL2/ARBProgramObject
              ${CMAKE_SOURCE_DIR}/driver/ogl/OGL2/OGLBaseObject
              ${CMAKE_SOURCE_DIR}/driver/ogl/OGL2/OGLBufferObject 
              ${CMAKE_SOURCE_DIR}/driver/ogl/OGL2/OGLTextureObject 
              ${CMAKE_SOURCE_DIR}/driver/gal/GAL/Interface
              ${CMAKE_SOURCE_DIR}/driver/gal/GALx/Interface
)

set(D3DSRC
              ${CMAKE_SOURCE_DIR}/driver/utils/TraceDriver/TraceDriverD3D.cpp
)

set(D3DINC
              ${CMAKE_SOURCE_DIR}/driver/d3d/D3D9

)

# Generate CG1 GPU CModel 
if(MSVC)
    set(EXTSRC ${OGLSRC} ${D3DSRC})
    set(EXTINC ${OGLINC} ${D3DINC})
    set(DRVLIB GAL GALx OGL2 D3D9 D3DTraceCore)
    #HAL #FIXME HAL should be decoupled from funcmodel and add here.
else()
    set(EXTSRC ${OGLSRC})
    set(EXTINC ${OGLINC})
    set(DRVLIB GAL GALx OGL2)
endif()

set( MAINSRC
            "CG1SIM.cpp"
            "CG1SIM.h"
)

source_group(external   FILES ${EXTSRC})
source_group(main       FILES ${MAINSRC})

add_executable(CG1SIM  ${MAINSRC}
                       ${EXTSRC}
                       )

# following is a demo argument line for the debugger
set_target_properties(CG1SIM PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS 
                                        "--param ../../../arch/common/params/CG1GPU.csv --arch CG1GPU.ini
                                         --trace ${CMAKE_SOURCE_DIR}/tests/ogl/trace/simplefog/tracefile.ogl.txt.gz"
                                        VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/_BUILD_/arch/Debug
                    )

target_include_directories(CG1SIM PUBLIC
                          ${CMAKE_SOURCE_DIR}/arch/common/params
                          ${CMAKE_SOURCE_DIR}/arch/funcmodel
                          ${CMAKE_SOURCE_DIR}/arch/utils
                          ${CMAKE_SOURCE_DIR}/driver/utils/TraceReader
                          ${CMAKE_SOURCE_DIR}/driver/utils/ApitraceParser
                          ${EXTINC}
                          )

target_link_libraries(CG1SIM PUBLIC
                      ApitraceParser
                      snappy
                      
                      CG1Common
                      CG1BMDL
                      CG1CMDL
                      ${DRVLIB}
                     )

if(CG_ARCH_MODEL_DEVEL)
    add_definitions(-DCG_ARCH_MODEL_DEVEL=1)
    add_subdirectory(archmodel)
    target_link_libraries(CG1SIM PUBLIC CG1AMDL)
    target_link_libraries(CG1AMDL PUBLIC systemc)
    target_include_directories(CG1SIM PUBLIC ${CMAKE_SOURCE_DIR}/arch/archmodel)
endif()
